# ancient_alphanum_tagger

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
algorithms/adaline/: adaline.cpp  adaline.h  main.cpp
algorithms/hebb/: hebb.cpp  hebb.h  main.cpp
algorithms/madaline/: madaline.cpp  madaline.h  main.cpp
algorithms/mlp/: main.cpp  mlp.cpp  mlp.h
algorithms/perceptron/: main.cpp  perceptron.cpp  perceptron.h
common/: draw.cpp  draw.h
data/: training.txt
